Fix header alignment

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,16 +10,16 @@ header{
     img{
       position: absolute;
       height:80px;
-      top:10px;
+      top:2px;
       margin:0;
       margin-left: -65px;
       left:50%;
       z-index: 600;
 
       @media (min-width: $screen-md-min) {
-        top: -25px;
+        top: -12.5px;
         margin:0;
-        height: 110px;
+        height: 100px;
         left:15px;
       }
     }
