--- a/style.css
+++ b/style.css
@@ -14,16 +14,16 @@ header {
     header .brand img {
       position: absolute;
       height: 80px;
-      top: 10px;
+      top: 2px;
       margin: 0;
       margin-left: -65px;
       left: 50%;
       z-index: 600; }
       @media (min-width: 900px) {
         header .brand img {
-          top: -25px;
+          top: -12.5px;
           margin: 0;
-          height: 110px;
+          height: 100px;
           left: 15px; } }
 
 @media (max-width: 899px) {
